--- a/complete_pipelines/demo_revenue/trel_regis_forecast_revenue.yml
+++ b/complete_pipelines/demo_revenue/trel_regis_forecast_revenue.yml
@@ -1,22 +1,23 @@
-name: merge_sales_diff
+name: forecast_revenue
 
 execution.profile: emr_pyspark
+profile_parameters:
+  emr_spark.bootstrap_actions:
+    - ["ds_basic", "s3://trel/bootstrap/ds_basic.sh", []]
 
 execution.source_code.main:
   class: github
   branch: demo_revenue
   path: https://github.com/cumulativedata/trel_contrib.git
-execution.main_executable: _code/complete_pipelines/demo_revenue/merge_sales_diff.py
+execution.main_executable: _code/complete_pipelines/demo_revenue/forecast_revenue.py
 
 repository_map:
   - sales: s3-us-east2
-    sales_diff: s3-us-east2
 
 execution.output_generator:
   class: default
   outputs:
-  - dataset_class: sales
-    name: output
+  - dataset_class: sales_stats
 
 resource.name: emr_spark
 resource.memory_level: normal
@@ -26,11 +27,9 @@ resource.args:
   spot: true
 
 scheduler:
-  class: periodic
+  class: single_instance
   labels: [ master ]
-  self_depends_on: [ sales ]
-  depends_on: [ sales_diff ]
+  depends_on: [ sales ]
   instance_ts_precisions: [ D ]
   cron_constraint: "0 0 * * *"
   schedule_ts_min: "2022-01-01 00:00:00"
-
