Changing registration to point to main branch from demo_revenue

--- a/complete_pipelines/demo_revenue/trel_regis_forecast_revenue.yml
+++ b/complete_pipelines/demo_revenue/trel_regis_forecast_revenue.yml
@@ -7,7 +7,7 @@ profile_parameters:
 
 execution.source_code.main:
   class: github
-  branch: demo_revenue
+  branch: main
   path: https://github.com/cumulativedata/trel_contrib.git
 execution.main_executable: _code/complete_pipelines/demo_revenue/forecast_revenue.py
 
