--- a/complete_pipelines/demo_revenue/trel_regis_merge_sales_diff.yml
+++ b/complete_pipelines/demo_revenue/trel_regis_merge_sales_diff.yml
@@ -4,7 +4,7 @@ execution.profile: emr_pyspark
 
 execution.source_code.main:
   class: github
-  branch: demo_revenue
+  branch: main
   path: https://github.com/cumulativedata/trel_contrib.git
 execution.main_executable: _code/complete_pipelines/demo_revenue/merge_sales_diff.py
 
