--- a/sensors/salesforce/config.yml
+++ b/sensors/salesforce/config.yml
@@ -11,7 +11,7 @@ checked_out_files_to_use:
 manager_name: main
 credentials.requested_name: default
 
-dataset_class: null # Other parameters can compute this
+dataset_class: User # Other parameters can compute this
 dataset_class_prefix: "salesforce."
 instance_prefix: null # it is recommended you specify a value here, even when null.
 instance_ts_precision: D # change based on frequency of drop
