--- a/sensors/salesforce/config.yml
+++ b/sensors/salesforce/config.yml
@@ -11,7 +11,7 @@ checked_out_files_to_use:
 manager_name: main
 credentials.requested_name: default
 
-dataset_class: User # Other parameters can compute this
+dataset_class: salesforce.User # Other parameters can compute this
 dataset_class_prefix: "salesforce."
 instance_prefix: null # it is recommended you specify a value here, even when null.
 instance_ts_precision: D # change based on frequency of drop
@@ -37,10 +37,10 @@ cron_constraint: "0 0 * * *"
 # E.g., normally, with an hourly cadence, instance 20220101_04 will be ready to load
 # as of 2022-01-01 05:00:00. With this parameter set to 60, it will be ready only
 # as of 2022-01-01 05:00:30
-delay_seconds: 30
+delay_seconds: -86370
 
 # Don't insert into the catalog, entries with
 # intance_ts older than this many seconds.
-max_instance_age_seconds: 864000 
+max_instance_age_seconds:  86370
 
 debug: [ "writes", "reads" ] # to debug the sensor add strings "writes" and "reads" into this list
