--- a/job_examples/bigquery/append_day/trel_regis_append_day.yml
+++ b/job_examples/bigquery/append_day/trel_regis_append_day.yml
@@ -7,6 +7,7 @@ execution.source_code.main:
   class: github
   branch: master
   path: git@github.com:cumulativedata/trel_contrib.git
+execution.main_executable: _code/job_examples/bigquery/append_day/append_day.py
 
 repository_map:
   - transactions: bq-us
