--- a/sensors/finnhub_bq/trel_sensor_finnhub.yml
+++ b/sensors/finnhub_bq/trel_sensor_finnhub.yml
@@ -1,7 +1,7 @@
 sensor_id: # a string identifying this sensor e.g. twitter_amc
 sensor.source_code.main:
   class: github
-  branch: master
+  branch: main
   path: git@github.com:cumulativedata/trel_contrib.git
 sensor.main_executable: _code/sensors/finnhub_bq/finnhub_sensor.py
 manager_name: main
